<resources>
    <string name="app_name">Massager</string>
    <string name="settings">Settings</string>
    <string name="settings_unlock_everything">Unlock everything</string>
    <string name="settings_not_vibration">Not vibration?</string>
    <string name="settings_rate_the_app">Rate the  App</string>
    <string name="settings_share">Share</string>
    <string name="settings_send_feedback">Send feedback</string>
    <string name="intensity">Intensity</string>
    <string name="pattern">Pattern</string>
    <string name="not_vibrating">Not vibrating?</string>
    <string name="intensity_press_the_button">Press the button</string>
    <string name="intensity_to_start_vibration">to start vibration</string>
    <string name="dialog_no_vibration_diagnotis">Check that vibration is enabled on your device. \n\nFor Example:</string>
    <string name="dialog_no_vibration_guide">Settings -> Sound -> Turn ON \n’During a call’ or ‘In silent mode’</string>
    <string name="dialog_go_to_settings">To the settings ></string>
    <string name="dialog_got_it">Got it</string>
    <string name="message_is_locked">Massager is locked</string>
    <string name="hold_to_unlock">Hold the button to unlock</string>
    <string name="unlock">Unlock</string>
    <string name="mode">Mode</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="soft">Soft</string>
    <string name="hard">Hard</string>
    <string name="undefined">Undefined</string>
    <string name="add">Create</string>
    <string name="pattern_creator">Pattern Creator</string>
    <string name="vibration_name">Vibration name</string>
    <string name="tab_pattern">Tap pattern</string>
    <string name="stop">Stop</string>
    <string name="again">Again</string>
    <string name="done">Done!</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="playing">Playing...</string>
    <string name="in_three_second">in 3 seconds</string>
    <string name="save">Save</string>
    <string name="sound">Sound</string>
    <string name="sound_environment_des">The environment expressed through sound</string>
    <string name="done_btn">Done</string>
    <string name="recording">Recording...</string>
    <string name="no_music">No music</string>
    <string name="off">Off</string>
    <string name="no_ads">No Ads</string>
    <string name="disable_all_ads_in_the_app">Disable all ads in the app</string>
    <string name="all_vibration_patterns">All vibration patterns</string>
    <string name="nine_selected_modes">9 selected modes</string>
    <string name="all_music_library">All music library</string>
    <string name="access_relaxing_music">Access to the relaxing music library</string>
    <string name="try_for_free">Try for free</string>
    <string name="unlock_fee_text">3 days for free, then 3$ per week</string>
    <string name="payment_policy">You will pay nothing if you cancel within 7 days. After the trial period, the subscription will automatically renew. You may cancel renewal at any time. View more details: <u>EULA. Privacy Policy.</u></string>
    <string name="input_pattern_name">Input pattern name</string>
</resources>