<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023
  ~ Create by abcdef on 4/22/23, 2:37 PM
  ~ Last modified 4/22/23, 2:37 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="288dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_no_vibration_bg"
    android:minWidth="288dp"
    android:minHeight="324dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:minHeight="73dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="28dp"
            android:scaleType="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_not_vibration"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1AFFFFFF"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="28dp"
        android:text="@string/dialog_no_vibration_diagnotis"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="28dp"
        android:text="@string/dialog_no_vibration_guide"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/goToSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="28dp"
        android:text="@string/dialog_go_to_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gotItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/dialog_got_it_btn_bg"
        android:gravity="center"
        android:text="@string/dialog_got_it"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>