<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023
  ~ Create by  on 4/25/23, 11:41 AM
  ~ Last modified 4/25/23, 11:41 AM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="31dp"
            android:text="@string/settings_unlock_everything"
            android:textStyle="bold"
            android:layout_marginHorizontal="90dp"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_checkbox_unlock"/>
            <LinearLayout
                android:layout_marginLeft="12dp"
                android:layout_marginRight="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/no_ads"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#8CFFFFFF"
                    android:textStyle="bold"
                    android:text="@string/disable_all_ads_in_the_app"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_checkbox_unlock"/>
            <LinearLayout
                android:layout_marginLeft="12dp"
                android:layout_marginRight="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/all_vibration_patterns"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#8CFFFFFF"
                    android:layout_marginTop="4dp"
                    android:textStyle="bold"
                    android:text="@string/nine_selected_modes"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_checkbox_unlock"/>
            <LinearLayout
                android:layout_marginLeft="12dp"
                android:layout_marginRight="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/all_music_library"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#8CFFFFFF"
                    android:layout_marginTop="4dp"
                    android:textStyle="bold"
                    android:text="@string/access_relaxing_music"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tryForFreeButton"
            android:layout_width="wrap_content"
            android:text="@string/try_for_free"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="17dp"
            android:background="@drawable/try_for_free_bg"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#BA000000"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/unlock_fee_text"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_policy"
        android:textColor="#6B000000"
        android:textSize="9dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:src="@drawable/ic_x_close"
        android:scaleType="center"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="45dp"/>
</FrameLayout>