<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023
  ~ Create by  on 4/22/23, 2:37 PM
  ~ Last modified 4/22/23, 2:37 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="288dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_no_vibration_bg"
    android:minWidth="288dp"
    android:minHeight="324dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:minHeight="73dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="28dp"
            android:scaleType="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pattern_creator"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="#80FFFFFF"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:hint="@string/input_pattern_name"
            android:textColorHint="#4DFFFFFF"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/vibration_name"
            android:textColor="@color/white"
            android:textSize="7sp" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/creatorPatternView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/pattern_creator_tap_bg"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_pattern_creator_img" />

            <TextView
                android:id="@+id/patternCreatorStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tab_pattern"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/patternCreatorSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/in_three_second"
                android:textColor="@color/white"
                android:textSize="9sp"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/patternCreatorControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:minHeight="40dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textPatternControlStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/again"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/imgPatternControlStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="9dp"
            android:src="@drawable/ic_pattern_creator_control_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/dialog_btn_two_btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="26dp"
            android:background="@drawable/dialog_btn_two_btn_bg"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:alpha="0.5"
            android:enabled="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>