<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023
  ~ Create by  on 4/22/23, 5:43 PM
  ~ Last modified 4/22/23, 5:43 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6070707">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/itemLockedText"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/message_is_locked" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/hold_to_unlock" />

        <TextView
            android:id="@+id/unlockButton"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/ic_unlock_btn_bg"
            android:text="@string/unlock" />

    </LinearLayout>
</FrameLayout>