<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023
  ~ Create by  on 4/22/23, 6:34 PM
  ~ Last modified 4/22/23, 6:34 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:minHeight="72dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backButton"
            android:src="@drawable/ic_music_back"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/sound"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/sound_environment_des"
                android:alpha="0.6"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/musicList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="50dp"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        tools:listitem="@layout/music_item"
        android:divider="@null"
        android:layout_marginTop="72dp"/>

    <TextView
        android:id="@+id/musicDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/music_done_btn_bg"
        android:text="@string/done_btn"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"
        android:textSize="17sp"/>
</FrameLayout>